2023-12-30  Bruno Haible  <bruno@clisp.org>

	Mark autoconf 2.72 as supported.
	* autogen.sh: Update comment.

2023-09-07  Bruno Haible  <bruno@clisp.org>

	Fix "make extracheck" failure (regression 2016-11-27).
	* tests/validate (KR-C): Remove the test against ' const ', since the
	input files jstest*.gperf now contain 'const' keywords.

2023-09-07  Bruno Haible  <bruno@clisp.org>

	Avoid "clang -Wimplicit-fallthrough" warnings also in C mode.
	* src/output.cc (Output::output_hash_function): Enhance the fallthrough
	marker, to include clang >= 10 in C mode.
	* tests/*.exp: Update.

2023-09-05  Bruno Haible  <bruno@clisp.org>

	Avoid "gcc -Wmissing-field-initializers" warnings on the generated code.
	* src/options.h (Options::has_initializer_suffix): New declaration.
	* src/options.cc (Options::has_initializer_suffix): New function.
	* src/output.cc (Output::output_keyword_table): If option -t is
	specified and option -F is not specified, emit '#pragma GCC diagnostic'
	lines, to silence -Wmissing-field-initializers warnings from gcc or
	clang.
	* tests/charsets.exp: Update.
	* tests/gpc.exp: Likewise.
	* tests/incomplete.exp: Likewise.
	* tests/languages.exp: Likewise.
	* tests/objc.exp: Likewise.
	* tests/test-4.exp: Likewise.

2023-07-08  Bruno Haible  <bruno@clisp.org>

	Avoid "gcc -Wunused-parameter" warnings on the generated hash function.
	Reported by Vinícius dos Santos Oliveira <vini.ipsmaker@gmail.com> in
	<https://savannah.gnu.org/bugs/index.php?64393>.
	* src/output.cc (Output::output_hash_function): If str is not used, emit
	a cast from str to void. If len is not used, emit a cast from len to
	void.
	* tests/permut2.exp: Update.
	* tests/permut3.exp: Likewise.
	* tests/permutc2.exp: Likewise.

2023-07-01  Bruno Haible  <bruno@clisp.org>

	doc: Tweaks.
	Reported by Laurent Lyaudet <laurent.lyaudet@gmail.com> in
	<https://lists.gnu.org/archive/html/bug-gperf/2023-06/msg00000.html>.
	* doc/gperf.texi: Update copyright year. Fix some typos.